--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-spring.application.name=microservicio_division
+
+spring.application.name=professor-service
+
+server.port=8801
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Configuración de H2 Database (Base de datos en memoria)
-spring.datasource.url=jdbc:h2:mem:divisiondb
+spring.datasource.url=jdbc:h2:mem:professordb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
-# Configuración JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
@@ -15,6 +18,3 @@ spring.jpa.properties.hibernate.format_sql=true
 # Habilitar consola H2 (opcional, para ver la base de datos)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-# Puerto del servidor
-server.port=8080
